Fixed alignment issues

--- a/footer.css
+++ b/footer.css
@@ -71,6 +71,7 @@ a {
 	left: 0;
 	bottom: 0;
 	width: 100%;
+	height: 48px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin: 0;
@@ -93,12 +94,43 @@ a {
 .social-bar {
 	position: absolute;
 	align-content: center;
+	left: 10vw;
+	width: 80vw;
+	height: 48px;
+	padding: 0;
+	margin: 0;
+}
+
+.social-bar > a, .right-bar > a{
+	width: 56px;
+	height: 48px;
+	display: inline-block;
+	align-content: center;
+	vertical-align: middle;
+}
+
+.social-bar > a > i , .right-bar > a > i {
+	position: relative;
+	display: inline-block;
+	top: 50%;
+	transform: translateY(-50%);
 	width: 100%;
 	padding: 0;
 	margin: 0;
 }
 
+.social-bar > a:after {
+	content: "";
+	display: inline-block;
+	vertical-align: top;
+	width: 16px;
+}
+
 .right-bar {
+	position: relative;
+	float: right;
+	width: 10vw;
+	height: 48px;
 	align-content: center;
 	padding: 0;
 	margin: 0;
@@ -107,7 +139,7 @@ a {
 #footer-icon {
 	text-align: center;
 	align-content: center;
-	vertical-align: center;
+	vertical-align: middle;
 	text-decoration: none;
 }
 
@@ -139,19 +171,22 @@ a {
 	font-size: 44px;
 }
 .icon-gmail {
-	font-size: 42px;
+	font-size: 48px;
 	padding-right: 0;
 }
+.icon-medium {
+	font-size: 30px;
+}
 .icon-outlook {
-	font-size: 28px;
+	font-size: 27px;
+}
+.icon-stackoverflow {
+	padding-left: 0;
+	padding-right: 0;
 }
 .icon-lichess {
 	font-size: 38px;
-	padding-left: 2px;
-}
-.icon-stack-overflow {
-	padding-left: 2px;
-	padding-right: 4px;
+	padding-left: 4px;
 }
 
 .icon-shuffle:hover {
@@ -180,9 +215,17 @@ a {
 }
 
 
-@media (max-width: 512px) {
+@media (max-width: 540px) {
 	.footer {
+		height: 7vw;
 		padding-top: 5px;
+	}
+	.social-bar, .right-bar {
+		height: 7vw;
+	}
+	.social-bar > a, .right-bar > a {
+		width: 7vw;
+		height: 7vw;
 	}
 	.footer .icon {
 		font-size: 5vw;
